--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "astro": "^4.8.6",
     "framer-motion": "^11.2.4",
     "gsap": "^3.12.5",
+    "lucide-react": "^0.378.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwindcss": "^3.4.3",
